Debugging the code

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  /* Variables Globals */
+  /* Global Variables */
   --initScreenBG-color: #006d00ff;
   --headerBG-color: lightgray;
   --ui-color: rgba(131, 12, 12);
@@ -21,8 +21,9 @@
 body {
   margin: 0;
 }
+/* ----------------------- */
 
-/* HEADER */
+/* -------- HEADER ------- */
 
 header {
   background-color: var(--headerBG-color);
@@ -30,16 +31,16 @@ header {
 
 #main_menu > ul{
   display: flex;
+  list-style: none;
   margin: 0;
   padding: .5em;
-  list-style: none;
 }
 
 #main_menu > ul > li{
   margin: 0 .5em;
 }
 
-#main_menu > ul button {
+#main_menu > ul > li > button {
   width: fit-content;
   font-size: .75em;
   font-weight: 700;
@@ -51,18 +52,18 @@ header {
 
 /* ----------------------- */
 
-/* MAIN */
+/* -------- MAIN --------- */
 
 main{
-  background-color: var(--background-color);
-  min-height: calc(100vh - 50px);
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: calc(100vh - 50px);
   font-size: 75px;
+  background-color: var(--background-color);
 }
 
-/* HOME SCREEN */
+/* ----- HOME SCREEN ----- */
 
 #initScreen {
   position: absolute;
@@ -78,27 +79,133 @@ main{
   background-color: var(--initScreenBG-color);
 }
 
+#cards_animation_container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+
+#cards_animation_container > ul{
+  position: relative;
+  height: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#cards_animation_container > ul > li.card:nth-child(1){
+  position: absolute;
+  animation: initCardAnimation1 40s infinite, initCardAnimationRotation 8s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(2){
+  position: absolute;
+  animation: initCardAnimation2 20s infinite, initCardAnimationRotation 10s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(3){
+  position: absolute;
+  animation: initCardAnimation3 45s infinite, initCardAnimationRotation 10s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(4){
+  position: absolute;
+  animation: initCardAnimation4 30s infinite, initCardAnimationRotation 9s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(5){
+  position: absolute;
+  animation: initCardAnimation1 50s infinite, initCardAnimationRotation 10s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(6){
+  position: absolute;
+  animation: initCardAnimation2 35s infinite, initCardAnimationRotation 12s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(7){
+  position: absolute;
+  animation: initCardAnimation3 60s infinite, initCardAnimationRotation 14s infinite;
+}
+
+#cards_animation_container > ul > li.card:nth-child(8){
+  position: absolute;
+  animation: initCardAnimation4 40s infinite, initCardAnimationRotation 8s infinite;
+}
+
+@keyframes initCardAnimation1 {
+  0% {left: -25%; top: -25%;}
+  12% {left: 50%; top: 50%;}
+  25% {left: 125%; top: -25%;}
+  37% {left: 50%; top: 50%;}
+  50% {left: 125%; top: 125%;}
+  62% {left: 50%; top: 50%;}
+  75% {left: -25%; top: 125%;}
+  87% {left: 50%; top: 50%;}
+  100% {left: -25%; top: -25%}
+}
+
+@keyframes initCardAnimation2 {
+  0% {left: -25%; top: 50%;}
+  25% {left: 50%; top: -25%;}
+  50% {left: 125%; top: 50%;}
+  75% {left: 50%; top: 125%;}
+  100% {left: -25%; top: 50%;}
+}
+
+@keyframes initCardAnimation3 {
+  0% {left: -25%; top: -25%;}
+  14% {left: 25%; top: 125%;}
+  25% {left: 50%; top: -25%;}
+  36% {left: 75%; top: 125%;}
+  50% {left: 125%; top: -25%;}
+  64% {left: 75%; top: 125%;}
+  75% {left: 50%; top: -25%;}
+  86% {left: 25%; top: 125%;}
+  100% {left: -25%; top: -25%;}
+}
+
+@keyframes initCardAnimation4 {
+  0% {left: -25%; top: 125%;}
+  14% {left: 25%; top: -25%;}
+  25% {left: 50%; top: 125%;}
+  36% {left: 75%; top: -25%;}
+  50% {left: 125%; top: 125%;}
+  64% {left: 75%; top: -25%;}
+  75% {left: 50%; top: 125%;}
+  86% {left: 25%; top: -25%;}
+  100% {left: -25%; top: 125%;}
+}
+
+@keyframes initCardAnimationRotation {
+  0% {transform: rotate(0deg);}
+  50% {transform: rotate(360deg);}
+  100% {transform: rotate(0deg);}
+}
+
 #logo {
   width: 25%;
   height: auto;
+  z-index: 999;
   margin-bottom: .5em;
 }
 
 #settingsContainer {
   display: flex;
   flex-direction: column;
+  width: 30%;
+  z-index: 999;
   background-color: var(--light-color);
   border: .05em solid var(--dark-color);
   border-radius: .5em;
-  width: 30%;
   padding: .2em;
 }
 
 #settingsContainer > #settingsInput {
   display: flex;
   justify-content: space-between;
-  padding-bottom: .2em;
   border-bottom: 1px solid var(--borders-color);
+  padding-bottom: .2em;
 }
 
 #settingsInput label {
@@ -133,7 +240,7 @@ main{
 
 /* ----------------------- */
 
-/* GAME SCREEN */
+/* ----- GAME SCREEN ----- */
 
 #scene {
   position: relative;
@@ -155,41 +262,37 @@ main{
   margin: 0;
 }
 
-#table {
+#table, #board {
   position: absolute;
   top: 1em;
   transform: 
     translate(-50%, -50%)
     rotateX(90deg);
-  width: 20em;
-  height: 25em;
-  background-image: url("./src/images/Free\ Wood\ Texture\ And\ Patterns\ »\ CSS\ Author.jpeg");
   transform-style: preserve-3d;
 }
 
+#table {
+  width: 20em;
+  height: 25em;
+  background-image: url("./src/images/woodTexture.jpeg");
+}
+
 #board {
-  position: absolute;
-  top: 1em;
-  transform: 
-    translate(-50%, -50%)
-    rotateX(90deg);
   width: 15em;
   height: 20em;
   background-image: 
     radial-gradient(#0000, var(--dark-color) 90%),
     repeating-conic-gradient(from 45deg, var(--board-color) 0deg 90deg, var(--board-color) 90deg 180deg);
   background-size: 100%, 1em 1em;
-  transform-style: preserve-3d;
 }
 
 .deck {
+  position: absolute;
+  transform: translateZ(-3em) translate(5em, -50%) rotateX(-90deg) scaleX(-1);
   display: flex;
   justify-content: center;
   align-items: center;
-
-  position: absolute;
   transform-style: preserve-3d;
-  transform: translateZ(-3em) translate(5em, -50%) rotateX(-90deg) scaleX(-1);
 }
 
 #deck {
@@ -203,13 +306,12 @@ main{
 }
 
 .cardsOfOpponent {
-  width: 100%;
-  height: fit-content;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  position: absolute;
+  width: 100%;
+  height: fit-content;
   transform-style: preserve-3d;
 }
 
@@ -241,25 +343,20 @@ main{
 
 #user_comands {
   position: fixed;
-  width: 75%;
   bottom: 0;
   display: flex;
   justify-content: space-around;
+  width: 75%;
   background-color: var(--ui-color);
   border-top: 1px solid var(--borders-color);
-  padding: .25em;
   border-radius: .5em .5em 0 0;
+  padding: .25em;
 }
 
 #user_comands > div{
   display: flex;
   width: 33.3%;
   padding: 0 .2em;
-}
-
-#user_comands button:disabled {
-  opacity: 55%;
-  cursor: auto;
 }
 
 #user_comands button{
@@ -272,8 +369,12 @@ main{
   cursor: pointer;
 }
 
+#user_comands button:disabled {
+  opacity: 55%;
+  cursor: auto;
+}
+
 #user_comands > #askCard_container {
-  display: flex;
   justify-content: space-between;
 }
 
@@ -305,40 +406,40 @@ main{
 #user_comands > #stand_container > div > .background-points {
   position: absolute;
   top: -2.5em;
+  transform: rotate(45deg);
   width: 2em;
   height: 2em;
-  background-color: var(--ui-color);
-  border-radius: 50% 0 50% 0;
-  transform: rotate(45deg);
   color: var(--light-color);
   font-size: .5em;
-  padding: .2em .5em;
+  background-color: var(--ui-color);
+  border-radius: 50% 0 50% 0;
   border-top: 1px solid var(--borders-color);
+  padding: .2em .5em;
 }
 
 #user_comands > #stand_container > div > #user_points {
   position: absolute;
-  width: 1.75em;
-  height: 1.75em;
   top: -2.25em;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000;
-  border-radius: 50%;
+  width: 1.75em;
+  height: 1.75em;
   color: var(--light-color);
   font-size: .5em;
-  padding: .2em .5em;
+  background-color: #000;
   border-top: 1px solid var(--borders-color);
+  border-radius: 50%;
+  padding: .2em .5em;
 }
 
 #user_comands > #stand_container > div > #user_name {
   position: absolute;
-  width: 10em;
   top: -6.5em;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 10em;
   color: var(--light-color);
   font-size: .25em;
 }
@@ -356,17 +457,12 @@ main{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-basis: 50%;
+  max-width: 50%;
 }
 
 #user_comands > #bet_container > div:first-child {
   padding: 0 .5em;
-  flex-basis: 50%;
-  max-width: 50%;
-}
-
-#user_comands > #bet_container > div:last-child {
-  flex-basis: 50%;
-  max-width: 50%;
 }
 
 #user_comands > #bet_container > div > label{
@@ -392,42 +488,39 @@ input#current_bet {
 }
 
 #user_comands > #bet_container button {
-  max-width: 100%;
+  min-width: fit-content;
 }
 
 .deck ul {
   position: relative;
   list-style: none;
-  margin: 20px;
+  margin: .5em;
   padding: 0;
 }
 
 .deck .tooltip-text {
-  visibility: hidden;
+  position: absolute;
+  transform: rotateX(90deg) scaleX(-1);
+  z-index: 999;
   width: 5em;
-  background-color: var(--ui-color);
+  visibility: hidden;
   color: var(--light-color);
   font-size: .25em;
   text-align: center;
+  background-color: var(--ui-color);
   border-radius: 6px;
-  padding: 0 .5em;
-  position: absolute;
-  z-index: 999;
-
-  transform: rotateX(90deg) scaleX(-1);
-  
+  padding: 0 .5em; 
 }
 
 .tooltip:hover .tooltip-text {
   visibility:  visible;
 }
 
-
 .deck ul li{
   position: absolute;
-  padding: .4rem .5rem;
   border-radius: 5%;
   background-color: var(--light-color);
+  padding: .4rem .5rem;
 }
 
 .deck ul li div{
@@ -451,22 +544,21 @@ input#current_bet {
   justify-content: center;
   flex-wrap: nowrap;
   list-style: none;
-  margin: 20px;
+  margin: 1.5rem;
   padding: 0;
 }
-
 
 #user_board .card {
   cursor: pointer;
 }
 
 .card {
-  background-color: transparent;
   height: 13.15rem;
   width: 8.5rem;
-  margin: 0 .5rem;
-  border-radius: 5%;
   perspective: 1000px;
+  background-color: transparent;
+  border-radius: 5%;
+  margin: 0 .5rem;
   user-select: none;
 }
 
@@ -507,27 +599,23 @@ input#current_bet {
 .card > div > .front, .card > div > .back {
   position: absolute;
   backface-visibility: hidden;
-  padding: .4rem .5rem;
-  border-radius: 5%;
   background-color: var(--cardBG-color);
+  border-radius: 5%;
+  padding: .4rem .5rem;
 }
 
 .card > div > .front > div {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   height: 11.95rem;
   width: 7.2rem;
-  padding: .2rem .5rem;
   outline: 1px solid var(--dark-color);
+  padding: .2rem .5rem;
 }
 
-.card > div:not(.flipped) > .back {
-  transform: rotateY(180deg);
-} 
-
-.card > .flipped > .front {
+.card > div:not(.flipped) > .back, .card > .flipped > .front {
   transform: rotateY(180deg);
 }  
 
@@ -547,8 +635,9 @@ input#current_bet {
   transform: rotateY(-180deg);
 }
 
+/* ----------------------- */
 
-/* ------------ BORDER OF CARDS ------------ */
+/* --- BORDER OF CARDS --- */
 
 .card > div > .front[suit="espases"] > div::before, .card > div > .front[suit="espases"] > div::after , .card > div > .front[suit="espases"] > div > div::before, .card > div > .front[suit="espases"] > div > div::after{
   content: "";
@@ -634,13 +723,15 @@ input#current_bet {
   left: calc(100%/3);
 }
 
-/* ------------ --------------- ------------ */
+/* ----------------------- */
+
+/* ---- CARD  CONTENT ---- */
 
 .card > div > .front > div > .card-content {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 1;
 }
 
 .card > div > .front > div > span {
@@ -664,8 +755,8 @@ input#current_bet {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: 12.75rem;
-  width: 7.5rem;
+  height: 11.95rem;
+  width: 7.2rem;
 }
 
 .card-content > div > img {
@@ -674,16 +765,16 @@ input#current_bet {
   margin: 0 0.1rem;
 }
 
+/* ----------------------- */
 
-/* ------------ ------------ ------------ */
-
+/* --- MODAL GAME/HELP --- */
 
 #modalGame, #modalHelp {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
+  display: none;
   width: 100vw;
   height: 100vh;
   overflow: auto;
@@ -691,17 +782,17 @@ input#current_bet {
 }
 
 .modal-content{
-  margin: 20% auto;
   width: 30%;
   background-color: var(--ui-color);
   border: 1px solid var(--borders-color);
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
   border-radius: 5%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  margin: 20% auto;
 }
 
 #modalHelp .modal-content{
-  margin: 10% auto;
   width: 75%;
+  margin: 10% auto;
 }
 
 .modal-content.game-winner {
@@ -723,8 +814,8 @@ input#current_bet {
   justify-content: center;
   font-size: .5em;
   font-weight: 600;
-  padding: 0.25em .5em;
   color: var(--light-color);
+  padding: 0.25em .5em;
 }
 
 .modal-header > span{
@@ -735,18 +826,18 @@ input#current_bet {
   position: absolute;
   top: .25em;
   right: 1em;
-  background-color: transparent;
   color: var(--light-color);
   font-size: 1em;
+  background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
 .modal-content > .modal-body{
+  font-size: .3em;
   background-color: var(--light-color);
   margin: 0;
   padding: 0 1em;
-  font-size: .3em;
 }
 
 #modalHelp > .modal-content > .modal-body{
@@ -754,8 +845,8 @@ input#current_bet {
 }
 
 #modalHelp > .modal-content > .modal-body > h3{
-  margin-bottom: 0;
   border-bottom: 1px solid var(--borders-color);
+  margin-bottom: 0;
 }
 
 #modalHelp > .modal-content > .modal-body > b{
@@ -786,9 +877,7 @@ input#current_bet {
   cursor: pointer;
 }
 
-
 /* ---------------------------- */
-
 
 .hide-content {
   display: none;
