--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ main{
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 50px);
+  overflow-x: hidden;
   font-size: 75px;
   background-color: var(--background-color);
 }
@@ -1471,7 +1472,7 @@ input#current_bet {
 
 .modal-footer{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   padding: .2em;
 }
 
@@ -1493,7 +1494,7 @@ input#current_bet {
 
 /* ---------- MOBILE ---------- */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   #logo {
     width: 65%;
   }
@@ -1606,7 +1607,7 @@ input#current_bet {
 
 /* ---------- TABLET ---------- */
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) and (min-width: 769px) {
   #logo {
     width: 40%;
   }
